--- a/index.html
+++ b/index.html
@@ -335,8 +335,9 @@
                 <p>Étudiant en informatique spécialisé en réseaux, cybersécurité et développement. Je transforme des idées ambitieuses en projets concrets.</p>
                 <div class="btn-group">
                     <a href="#projects" class="btn btn-primary">Découvrir mes projets</a>
-                    <button class="btn btn-outline">📥 Télécharger CV</button>
-                </div>
+                    <a href="assets/CV.pdf" download="CV_Paul_Bonneau.pdf" class="btn btn-outline">
+                        📥 Télécharger CV
+                    </a>                </div>
             </div>
         </div>
 
